Added more features with their Icons

--- a/Stonks/app/src/main/res/layout/activity_main.xml
+++ b/Stonks/app/src/main/res/layout/activity_main.xml
@@ -67,13 +67,97 @@
                     android:layout_height="match_parent">
 
                     <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/transfer"
+                        app:srcCompat="@drawable/transfer" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Payment"
+                        android:textSize="25sp" />
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                style="@style/CardStyle">
+
+                <LinearLayout
+                    android:padding="16dp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
                         android:src="@drawable/pay"
                         android:layout_width="80dp"
                         android:layout_height="80dp"/>
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Loan"
+                        android:textSize="25sp" />
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                style="@style/CardStyle">
+
+                <LinearLayout
+                    android:padding="16dp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/put_coin"
+                        app:srcCompat="@drawable/put_coin" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Invest"
+                        android:textSize="25sp" />
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                style="@style/CardStyle">
+
+                <LinearLayout
+                    android:padding="16dp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/manage"
+                        app:srcCompat="@drawable/manage" />
+
+                    <TextView
                         android:textSize="25sp"
-                        android:text="Pay"
+                        android:text="Manage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -94,15 +178,16 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:src="@drawable/manage"
                         android:layout_width="80dp"
-                        android:layout_height="80dp"/>
+                        android:layout_height="80dp"
+                        android:src="@drawable/piggy_bank"
+                        app:srcCompat="@drawable/piggy_bank" />
 
                     <TextView
-                        android:textSize="25sp"
-                        android:text="Manage"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:text="Budget"
+                        android:textSize="25sp" />
 
                 </LinearLayout>
 
@@ -157,6 +242,33 @@
                         android:text="Incentives"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                style="@style/CardStyle">
+
+                <LinearLayout
+                    android:padding="16dp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/funding"
+                        app:srcCompat="@drawable/funding" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Settings"
+                        android:textSize="25sp" />
 
                 </LinearLayout>
 
