Added XML Layout of Transfer activity

--- a/Stonks/app/src/main/res/layout/activity_main.xml
+++ b/Stonks/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Payment"
+                        android:text="Transfer"
                         android:textSize="25sp" />
 
                 </LinearLayout>
@@ -238,7 +238,7 @@
                         android:layout_height="80dp"/>
 
                     <TextView
-                        android:textSize="25sp"
+                        android:textSize="21sp"
                         android:text="Incentives"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
