--- a/Stonks/app/src/main/res/layout/activity_main.xml
+++ b/Stonks/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_transfer"
                 style="@style/CardStyle">
 
                 <LinearLayout
@@ -85,6 +86,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_loan"
                 style="@style/CardStyle">
 
                 <LinearLayout
@@ -112,6 +114,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_invest"
                 style="@style/CardStyle">
 
                 <LinearLayout
@@ -140,6 +143,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_manage"
                 style="@style/CardStyle">
 
                 <LinearLayout
@@ -168,6 +172,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_budget"
                 style="@style/CardStyle">
 
                 <LinearLayout
@@ -196,6 +201,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_analyse"
                 style="@style/CardStyle">
 
                 <LinearLayout
@@ -223,6 +229,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_incentives"
                 style="@style/CardStyle">
 
                 <LinearLayout
@@ -249,6 +256,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_settings"
                 style="@style/CardStyle">
 
                 <LinearLayout
