--- a/Stonks/app/src/main/res/layout/activity_payment.xml
+++ b/Stonks/app/src/main/res/layout/activity_payment.xml
@@ -29,7 +29,7 @@
             android:id="@+id/tv_stonks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100"
+            android:text="0"
             android:textSize="80sp"
             android:layout_weight="1"
             android:textColor="#ffffff"
@@ -57,15 +57,16 @@
         android:orientation="vertical">
 
         <TextView
-            android:background="#C4D4F4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Recipient"
-            android:textSize="25sp"
-            android:padding="5dp"
+            android:background="#6458FF"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textAllCaps="true"/>
+            android:padding="5dp"
+            android:text="Recipient"
+            android:textColor="#ffffff"
+            android:textAllCaps="true"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/et_recipient"
@@ -73,7 +74,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/et_bg"
             android:hint="Username"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:textSize="20sp"
             android:textColorHint="@color/login_form_details_medium"
             android:padding="16dp"
@@ -89,11 +90,12 @@
         android:orientation="vertical">
 
         <TextView
-            android:background="#C4D4F4"
+            android:background="#6458FF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Transfer Amount"
-            android:textSize="25sp"
+            android:textSize="22sp"
+            android:textColor="#ffffff"
             android:padding="5dp"
             android:gravity="center"
             android:textStyle="bold"
@@ -128,8 +130,6 @@
                 android:padding="10dp"/>
 
         </LinearLayout>
-
-
 
     </LinearLayout>
 
