--- a/Stonks/app/src/main/res/values/styles.xml
+++ b/Stonks/app/src/main/res/values/styles.xml
@@ -18,4 +18,8 @@
         <item name="cardCornerRadius">12dp</item>
     </style>
 
+    <style name="OnAnimations">
+        <item name="lottie_loop">true</item>
+    </style>
+
 </resources>
