--- a/appV2/app/src/main/res/values/colors.xml
+++ b/appV2/app/src/main/res/values/colors.xml
@@ -5,4 +5,11 @@
     <color name="myWalletButtons">#4ea7f9</color>
     <color name="bg_blue">#87C7D3</color>
     <color name="bg_pink">#EBBED2</color>
+    <color name="card_title">#4790FF</color>
+    <color name="card_description">#777777</color>
+    <color name="card_details">#ACACAC</color>
+    <color name="transparent">#00000000</color>
+    <color name="light_blue">#78BFF9</color>
+    <color name="orange_red">#FF7A7A</color>
+    <color name="white">#ffffff</color>
 </resources>
