--- a/appV2/app/src/main/res/values/styles.xml
+++ b/appV2/app/src/main/res/values/styles.xml
@@ -5,5 +5,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
+    
+    <style name="Title">
+        <item name="fontFamily">@font/neuemontreal</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
 </resources>
