--- a/appV2/app/src/main/res/layout/activity_main.xml
+++ b/appV2/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_height="0dp"
         android:layout_weight="1">
     </FrameLayout>
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/naviboi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -22,7 +22,6 @@
         app:itemIconTint="@color/colorPrimaryDark"
         app:itemIconSize="35dp"
         app:itemTextColor="@color/colorPrimaryDark"
-        app:labelVisibilityMode="labeled"
-        />
+        app:labelVisibilityMode="labeled" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
