--- a/appV2/app/src/main/res/layout/my_wallet.xml
+++ b/appV2/app/src/main/res/layout/my_wallet.xml
@@ -13,7 +13,7 @@
         android:paddingVertical="15dp"
         android:layout_marginBottom="30dp"
         android:orientation="horizontal"
-        android:background="@drawable/my_wallet_buttons">
+        android:background="@drawable/blue">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
                 android:id="@+id/buy"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@drawable/buy"
+                android:background="@drawable/blue_button"
                 android:layout_marginBottom="5dp"/>
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
@@ -95,7 +95,7 @@
                 android:id="@+id/eth"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/myWalletButtons"
+                android:textColor="@color/blue"
                 android:textSize="20sp"
                 android:text="@string/eth_default"
                 android:textStyle="bold"/>
@@ -132,7 +132,7 @@
                 android:id="@+id/stk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/myWalletButtons"
+                android:textColor="@color/blue"
                 android:textSize="20sp"
                 android:text="@string/stk_default"
                 android:textStyle="bold"/>
@@ -169,7 +169,7 @@
                 android:id="@+id/btc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/myWalletButtons"
+                android:textColor="@color/blue"
                 android:textSize="20sp"
                 android:text="@string/btc_default"
                 android:textStyle="bold"/>
