--- a/appV2/app/src/main/res/values/colors.xml
+++ b/appV2/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="myWalletButtons">#4ea7f9</color>
+    <color name="blue">#4ea7f9</color>
     <color name="bg_blue">#87C7D3</color>
     <color name="bg_pink">#EBBED2</color>
     <color name="card_title">#4790FF</color>
@@ -12,4 +12,7 @@
     <color name="light_blue">#78BFF9</color>
     <color name="orange_red">#FF7A7A</color>
     <color name="white">#ffffff</color>
+    <color name="peach">#F9CACA</color>
+    <color name="dark_blue">#4F80CC</color>
+    <color name="really_light_blue">#E4F5FF</color>
 </resources>
